--- a/src/components/popularPost.css
+++ b/src/components/popularPost.css
@@ -4,14 +4,15 @@
     overflow-x: auto; /* Allow horizontal scrolling if too many posts */
 }
 .Featured-posts{
-    background: linear-gradient(130deg, #1a1a1a, #4169e1, #3d007a, #5b2673, #8f3a73);
+    background: linear-gradient(130deg, #0d0d0d, #1a1a1a, #1e3a8a, #26448b, #2f3075);
     padding-bottom: 10px;
 }
 .Featured-posts h3{
     color: white;
     padding: 10px;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
+    font-family: 'Hunters', sans-serif;
 }
 #postsCards {
     display: flex;
