--- a/src/components/quotes.css
+++ b/src/components/quotes.css
@@ -8,6 +8,7 @@
     font-size: 27px;
     color: white;
     text-align: center;
+    font-family: 'Cookies', serif;
 }
 .quote blockquote:hover {
     color: white;
