--- a/src/styles.css
+++ b/src/styles.css
@@ -261,3 +261,12 @@ body{
 .search-bar button:hover {
     box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.3), inset -5px -5px 10px rgba(255, 255, 255, 0.1);
 }
+
+
+.sign{
+    color: #7a288a;
+  }
+
+.sign:hover{
+    color: #452064;
+}
