--- a/src/components/popularPost.css
+++ b/src/components/popularPost.css
@@ -4,7 +4,7 @@
     overflow-x: auto; /* Allow horizontal scrolling if too many posts */
 }
 .Featured-posts{
-    background: linear-gradient(130deg, #0d0d0d, #1a1a1a, #1e3a8a, #26448b, #2f3075);
+    background:linear-gradient(130deg, #000046, #3F00FF);
     padding-bottom: 10px;
 }
 .Featured-posts h3{
