--- a/src/components/section.css
+++ b/src/components/section.css
@@ -9,7 +9,7 @@
     padding: 20px;
     padding-top: 30px;
     margin: 20px 0;
-    background: linear-gradient(130deg, #0d0d0d, #1a1a1a, #1e3a8a, #26448b, #2f3075);
+    background: linear-gradient(130deg, #000046, #3F00FF);
 }
 .description{
     font-family: 'Hunters', sans-serif;
