--- a/src/user.css
+++ b/src/user.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: linear-gradient(130deg, #000046, #3F00FF);
+    background: linear-gradient(90deg, #000046 25%, blue 50%, #3F00FF 75%, purple 100%, rgb(216, 173, 181)) !important;
     padding-top: 70px;
     display: flex;
     height: 100vh; /* Full screen height */
@@ -106,9 +106,7 @@
     border-radius: 50%; /* Keeps it round */
     margin-bottom: 20px; /* Add some space below the picture */
 }
-.recommended-list h2, .current-reads h2, .to-be-read h2{
-    padding-left: 10px;
-}
+
 .side-bar h2 {
     color: white;
     font-size: 30px;
@@ -130,9 +128,6 @@
     font-size: 24px;
 }
 
-.recommended-list, .current-reads, .my-series, .My-books {
-margin-top: 20px; /* Add space between the button and the lists */
-}
 
 .edit-profile-button {
 background: linear-gradient(90deg, #4CAF50, #2b6d2e); /* Gradient from green to darker green */
@@ -172,21 +167,7 @@ box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Add subtle shadow for a hover ef
 transform: scale(1.02); /* Slight enlargement on hover */
 }
 
-#recommended-book-list, #current-read-list, #to-be-read-list, #my-series-list, #my-book-list  {
-    display: flex;
-    align-items: start;
-    justify-content: center; /* Center items horizontally */
-    gap: 20px; /* Space between books */
-    overflow-x: auto; /* Allow horizontal scrolling */
-    scroll-behavior: smooth; /* Smooth scrolling effect */
-    white-space: nowrap; /* Prevent items from wrapping to a new line */
-    padding: 20px;
-    padding-top: 30px;
-    margin: 20px 0;
-
-}
-
-.books {
+.book-item {
     display: inline-block;
     text-align:  start;
     margin: 0 10px; /* This can be adjusted to control spacing */
@@ -194,7 +175,7 @@ transform: scale(1.02); /* Slight enlargement on hover */
   
 }
 
-.books img {
+.book-cover {
 width: 160px; /* Adjust width */
 height: 240px; /* Adjust height */
 object-fit: cover;
@@ -202,7 +183,7 @@ transition: transform 0.3s ease-in-out;
 box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3); /* Shadow only at the bottom */
 }
 
-.books img:hover {
+.books-.book-cover {
 transform: scale(1.05); /* Slight zoom on hover */
 }
 
@@ -353,5 +334,13 @@ margin-bottom: 10px;
   .scroll-arrow.right {
     right: 0;
   }
+
+  .side-bar #expert-bage {
+    width: 160px; /* Adjust the width to make it smaller */
+    height: auto; /* Maintain aspect ratio */
+    margin-top: 10px; /* Add spacing from other elements */
+    margin-bottom: 10px; /* Add spacing from other elements */
+}
+
   
   
