--- a/src/EditProfile.css
+++ b/src/EditProfile.css
@@ -2,11 +2,10 @@
     max-width: 600px;
     margin: auto;
     padding: 20px;
-    background: linear-gradient(110deg, #000046, #3F00FF);
-
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
+    background-color: linear-gradient(110deg, #000046, #3F00FF) !important;
     
   }
   
@@ -25,7 +24,7 @@
   
   .form-group label {
     display: block;
-    color: #ddd;
+    color: #fff;
     margin-bottom: 5px;
     font-weight: bold;
     font-family: Garamond, serif;
@@ -59,6 +58,7 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3), -5px -5px 10px rgba(255, 255, 255, 0.1);
     transition: box-shadow 0.3s ease;
     cursor: pointer;
+    margin-bottom: 20px;
   }
   
   .save-button:hover {
